fix .header-avatar not showing in IE8 (max-width issue)

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -381,6 +381,7 @@ a.facebook-btn {
   float: right;
   width: 3em;
   height: 3em;
+  max-width: none;
 }
 .signed-in-as {
   font-weight: normal;
